# AuthorBot

./: .dockerignore  .gitignore  Dockerfile  Okteto  Pipfile  Procfile  README.md  app.json  banner.sh  docker-compose.yml  docker.sh  hikka-831190060.session  install.sh  okteto-stack.yaml  pyproject.toml  termux.sh
acbot/: __main__.py  _internal.py  configurator.py  database.py  dispatcher.py  forbid_joins.py  heroku.py  loader.py  log.py  main.py  security.py  tl_cache.py  translations.py  types.py  utils.py  validators.py  version.py  ТестBot.py
acbot/compat/: geek.py
acbot/inline/: bot_pm.py  core.py  events.py  form.py  gallery.py  list.py  query_gallery.py  token_obtainment.py  types.py  utils.py
acbot/modules/: AFK.py  AuthorChat.py  Crypto.py  FDroid.py  HideMessage.py  InlineRandom.py  LongRead.py  Lyrics.py  Settings.py  Spoilers.py  Teledocs.py  Weather.py  api_protection.py  backup.py  bot_settings.py  configuration.py  help.py  hide.py  info.py  inline_stuff.py  inlineping.py  loader.py  myAFK.py  okteto_waker.py  presets.py  python.py  quickstart.py  security.py  settings.py  spy.py  test.py  update_notifier.py  updater.py  ТестBot.py  📥 Feedback.py
acbot/web/: core.py  root.py
assets/: variables.json
data/: README.md
downloads/ai_mods/: AIContext.py  (+3 more)
hikka/: __init__.py  __main__.py  _internal.py  _local_storage.py  configurator.py  database.py  dispatcher.py  loader.py  log.py  main.py  pointers.py  qr.py  security.py  tl_cache.py  translations.py  types.py  utils.py  validators.py  version.py
web-resources/: base.jinja2  root.jinja2
(+58 files in other folders)
